<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
              android:layout_height="match_parent" android:orientation="vertical" android:gravity="center|start"
              android:background="@color/white" style="?android:attr/borderlessButtonStyle" android:weightSum="5">


    <LinearLayout android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="3"
                  android:orientation="vertical" android:gravity="center" android:paddingTop="30dp">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/hangman" android:textSize="40dp" android:paddingBottom="20dp"
                  android:textColor="@color/green" android:textStyle="bold"/>
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:id="@+id/hangmanImage" android:src="@drawable/i_7_s"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="2"
                  android:orientation="vertical" android:gravity="center">
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/play"
                android:onClick="play" android:background="@color/green" android:textColor="@color/white"
                android:layout_marginBottom="20dp"/>
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:onClick="addNewWord"
                android:background="@color/brown" android:textColor="@color/white" android:paddingLeft="20dp" android:paddingRight="20dp"
                android:text="@string/addNewWord"/>
    </LinearLayout>
</LinearLayout>